# holon

./: .gitignore  .jscpd.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_PRINCIPLES.md  BUSINESS_ANALYSIS.md  CLAUDE.md  CLEANUP.md  Cargo.toml  DEVELOPMENT.md  FEASIBILITY_TODOIST_WEDGE.md  HANDOFF_TURSO_IVM_JOIN_PANIC.md  MARKET_RESEARCH.md  PARSE_DONT_VALIDATE_AUDIT.md  PRE_MORTEM.md  REACTIVE_PRQL_OUTLINER.txt  REACTIVE_PRQL_RENDERING.md  README.md  SWOT.md  SYNC_ARCHITECTURE_ANALYSIS.md  TESTING.md  TODO.md  TODO_PBT.md  TURSO_SCHEMA_SYNC_BUG.md  VISION.md  VISION_AI.md  VISION_LONG_TERM.md  VISION_PETRI_NET.md  deny.toml  justfile  mcp-proxy.yaml  package-lock.json
crates/holon/: Cargo.toml  mutants.toml
crates/holon-api/: Cargo.toml
crates/holon-api/src/: auth.rs  block.rs  document.rs  entity.rs  entity_uri.rs  hashmap_value_conversions.rs  inline_mark.rs  input_types.rs  interp_value.rs  lib.rs  link_parser.rs  predicate.rs  reactive.rs  render_eval.rs  render_types.rs  streaming.rs  types.rs  widget_meta.rs  widget_spec.rs
crates/holon-engine/: Cargo.toml
crates/holon-engine/src/: arc.rs  display.rs  engine.rs  guard.rs  lib.rs  main.rs  objective.rs  value.rs
crates/holon-engine/tests/: pbt.proptest-regressions  pbt.rs
crates/holon-frontend/: Cargo.toml  build.rs
crates/holon-frontend/src/: cdc.rs  cli.rs  collection_layout.rs  command_menu.rs  command_provider.rs  config.rs  display_node.rs  editable_text_provider.rs  editor_controller.rs  focus_path.rs  frontend_module.rs  geometry.rs  input.rs  input_trigger.rs  instance_config.rs  lane_filtered_provider.rs  lib.rs  link_provider.rs  logging.rs  mcp_integrations.rs  memory_monitor.rs  mutable_tree.rs  navigation.rs  operation_matcher.rs  operations.rs  popup_menu.rs  preferences.rs  provider_cache.rs  reactive.rs  reactive_view.rs  reactive_view_model.rs  render_context.rs  render_interpreter.rs  rich_text_selection.rs  shadow_dom.rs  theme.rs  user_driver.rs  view_event_handler.rs  view_model.rs  widget_gallery.rs
crates/holon-frontend/tests/: bottom_dock.rs  container_query_columns.rs  trailing_slot.rs
crates/holon-integration-tests/: CUCUMBER.md  Cargo.toml  trace-20260318-151006.json  trace-20260318-151344.json  trace-20260318-153225.json
crates/holon-integration-tests/.pi-lens/: turn-state.json
crates/holon-integration-tests/src/: assertions.rs  debug_pause.rs  display_assertions.rs  lib.rs  mutation_driver.rs  org_utils.rs  pbt_mcp_fake.rs  polling.rs  screenshot_overlay.rs  test_environment.rs  test_tracing.rs  ui_driver.rs  widget_state.rs
crates/holon-integration-tests/tests/: bidirectional_sync.rs  cross_frontend_pbt.rs  cucumber.rs  general_e2e_pbt.proptest-regressions  general_e2e_pbt.rs  loro_sync_controller_pbt.pbt-regressions  loro_sync_controller_pbt.rs  multiline_serializer_test.rs  turso_ivm_index_bug.rs  watch_ui.rs
crates/holon-layout-testing/: Cargo.toml
crates/holon-layout-testing/src/: blueprint.rs  display_assertions.rs  generators.rs  invariants.rs  lib.rs  live_tree.rs  registry.rs  scenario.rs  snapshot.rs  ui_interaction.rs  vms.rs
crates/holon-macros/: Cargo.toml
crates/holon-macros-test/: Cargo.toml
crates/holon-macros-test/src/: lib.rs
crates/holon-macros/src/: attr_parser.rs  builder_registry.rs  entity.rs  lib.rs  operations_trait.rs  widget_builder.rs
crates/holon-markdown/: Cargo.toml
crates/holon-markdown/src/: file_format.rs  frontmatter.rs  lib.rs  parser.rs  renderer.rs  wikilink.rs
crates/holon-markdown/tests/: seam_validation.rs
crates/holon-mcp-client/: Cargo.toml  HANDOFF_MCP_OAUTH.md  gmailcal_mcp_operations.yaml
crates/holon-mcp-client/src/: credential_store.rs  integration_config.rs  lib.rs  mcp_integration.rs  mcp_notification_handler.rs  mcp_provider.rs  mcp_resource_discovery.rs  mcp_schema_mapping.rs  mcp_sidecar.rs  mcp_sync_engine.rs  mcp_sync_strategy.rs  mcp_vtable.rs
crates/holon-org-format/: Cargo.toml
crates/holon-org-format/examples/: inline_ast_audit.rs
crates/holon-org-format/src/: block_diff.rs  inline_marks.rs  lib.rs  link_parser.rs  models.rs  org_renderer.rs  parser.rs
crates/holon-org-format/tests/: inline_marks_proptest.rs
crates/holon-orgmode/: Cargo.toml
crates/holon-orgmode/queries/: orgmode_hierarchy.prql
crates/holon-orgmode/src/: block_diff.rs  block_params.rs  di.rs  file_format.rs  file_io.rs  file_watcher.rs  lib.rs  models.rs  org_renderer.rs  org_sync_controller.rs  orgmode_event_adapter.rs  orgmode_sync_provider.rs  parser.rs  traits.rs
crates/holon-orgmode/tests/: round_trip_pbt.proptest-regressions  round_trip_pbt.rs  sync_controller_mutation_pbt.proptest-regressions  sync_controller_mutation_pbt.rs
crates/holon/examples/: gql_join_table_resolver_h4.rs  ivm_batch_repro.rs  loro_edge_field_spike_h5.rs  loro_map_as_set_h3.rs  loro_marks_spike.rs  now_query_perf_h7.rs  turso_ivm_3level_chain_cdc.rs  turso_ivm_chained_matview_stale_rows.rs  turso_ivm_dirty_pages_repro.rs  turso_ivm_focus_roots_churn.rs  turso_ivm_json_array_gating_h2.rs  turso_ivm_junction_gating_repro.rs  turso_ivm_negative_weight_repro.rs  turso_ivm_negative_weight_restart_repro.rs  turso_ivm_null_where_neq_repro.rs  turso_ivm_pager_crash_replay.sql  turso_ivm_recursive_cte_join_repro.rs  turso_ivm_recursive_update_cdc_pair.rs  turso_ivm_register_mismatch_existing_db_repro.rs  turso_ivm_register_mismatch_repro.rs  turso_ivm_update_parent_id_repro.rs  (+1 more)
frontends/blinc/: Cargo.toml  build.rs
frontends/dioxus/: Cargo.toml  Dioxus.toml  HANDOFF.md
frontends/dioxus-web/: Cargo.toml  README.md  Trunk.toml  index.html  package.json  serve.mjs  test-relay.mjs
frontends/gpui/: Cargo.toml  Dioxus.toml  MEMORY_ANALYSIS.md  TESTING.md  ZED_UI_PATTERNS.md  justfile
frontends/holon-worker/: .gitignore  Cargo.toml  README.md  browser.js  holon_worker.wasi-browser.js  holon_worker.wasi.cjs  index.d.ts  package.json
frontends/ply/: Cargo.toml  HANDOFF.md
frontends/tui/: Cargo.toml
frontends/waterui/: Cargo.toml  HANDOFF.md  HANDOFF_PROMPT.md  Water.toml
tools/: Cargo.toml
tools/src/: turso_sql_replay.rs
(+1315 files in other folders)
