[workspace]
members = [
    "crates/holon",
    "crates/holon-todoist",
    "crates/holon-api",
    "crates/holon-core",
    "crates/holon-engine",
    "crates/holon-org-format",
    "crates/holon-orgmode",
    "crates/holon-filesystem",
    "crates/holon-frontend",
    "crates/holon-integration-tests",
    "crates/holon-layout-testing",
    "crates/holon-markdown",
    "crates/holon-mcp-client",
    "crates/holon-macros",
    "crates/holon-macros-test",
    "frontends/mcp",
    "frontends/flutter/rust",
    "frontends/gpui",
    "frontends/tui",
    "frontends/ply",
    "tools",
    "workspace-hack",
    "experiments/lorotree-spike",
]
exclude = [
    # naga 27 (via wgpu) + codespan-reporting 0.12 = WriteColor trait error
    # when features are unified across the workspace. Known upstream bug:
    # https://github.com/gfx-rs/wgpu/issues/7915
    # Fix landed in codespan-reporting 0.13; waiting for wgpu/naga backport:
    # https://github.com/gfx-rs/wgpu/issues/8366
    "frontends/waterui",
    # cocoa 0.26.0 (gpui) vs 0.26.1 (dioxus-desktop) conflict
    "frontends/dioxus",
    # ast-grep depends on tree-sitter 0.26, gpui-component on 0.25 — link conflict
    "crates/holon-architecture-tests",
    # holon-worker is an out-of-workspace crate targeting wasm32-wasip1-threads
    # via `napi build`. It has its own Cargo.lock and its own [workspace] table.
    # See plan: ~/.claude/plans/nifty-bouncing-ladybug.md (Phase 1, H3).
    "frontends/holon-worker",
    # dioxus-web targets wasm32 only; web-sys/js-sys are not available on native
    # so cargo check --workspace would fail. Build via `trunk build` instead.
    "frontends/dioxus-web",
]
resolver = "2"

[workspace.dependencies]
# === Serialization ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# === Async ===
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"
futures-signals = "0.3"

# === Error handling ===
anyhow = "1.0"
thiserror = "2.0"
miette = "7.4"

# === Observability ===
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = { version = "0.32", features = ["tracing-log"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["http", "http-proto"] }
opentelemetry-stdout = "0.31"
opentelemetry-appender-tracing = "0.31"

# === Time/IDs ===
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1.1"
fluent-uri = { version = "0.3", features = ["serde"] }

# === Data structures ===
loro = "= 1.11.1"
loro_fractional_index = "= 1.6.0"
indexmap = "2.12"
regex = "1.10"
rand = "0.9"
once_cell = "1.19"
similar = "2.7"
rhai = { version = "1", features = ["sync"] }

# === SQL parsing ===
sqlparser = "0.61"

# === Network ===
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
iroh = { version = "0.96.0", default-features = false }

# === Testing ===
proptest = "1.6"
proptest-state-machine = "0.7.0"
cucumber = "0.22"
serial_test = "3.2"
tempfile = "3.23"

# === Proc macro ===
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# === File system ===
walkdir = "2"
ignore = "0.4"

# === Crypto ===
blake3 = "1"
sha2 = "0.10"
hex = "0.4"

# === TUI ===
unicode-segmentation = "1.11"
portable-pty = "0.8"
is_ci = "1.2"
strip-ansi-escapes = "0.2"

# === Flutter ===
flutter_rust_bridge = "2"

# === Memory profiling ===
memory-stats = "1"
dhat = "0.3"
ctrlc = "3"

# === Config ===
clap = { version = "4", features = ["derive", "env"] }
premortem = "0.6"

# === Other ===
orgize = "0.10.0-alpha.10"
libsql = { version = "0.9", features = ["core", "remote"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# === External git deps ===
# Local path overrides in .cargo/config.toml (not checked in)
turso = { git = "https://github.com/nightscape/turso.git", branch = "holon", default-features = false }
turso_core = { git = "https://github.com/nightscape/turso.git", branch = "holon", default-features = false, features = ["json"] }
turso_sdk_kit = { git = "https://github.com/nightscape/turso.git", branch = "holon", default-features = false }
turso_ext = { git = "https://github.com/nightscape/turso.git", branch = "holon", default-features = false }
prqlc = { git = "https://github.com/nightscape/prql.git", branch = "main" }
prqlc-parser = { git = "https://github.com/nightscape/prql.git", branch = "main" }
gql-parser = { git = "https://github.com/holon-space/gql-to-sql.git", branch = "main" }
gql-transform = { git = "https://github.com/holon-space/gql-to-sql.git", branch = "main" }
fluxdi = { git = "https://github.com/holon-space/fluxdi", branch = "dev", features = ["thread-safe", "async-factory", "lifecycle", "dynamic", "eager-resolution"] }
r3bl_tui = { git = "https://github.com/nightscape/r3bl-open-core.git", branch = "main" }
gpui-sortable = { path = "../../../rust/gpui-extra-components/crates/sortable" }
gpui-schedule-view = { path = "../../../rust/gpui-extra-components/crates/schedule-view" }

# === Internal crates ===
holon = { path = "crates/holon" }
holon-api = { path = "crates/holon-api" }
holon-core = { path = "crates/holon-core" }
holon-frontend = { path = "crates/holon-frontend" }
holon-macros = { path = "crates/holon-macros" }
holon-mcp-client = { path = "crates/holon-mcp-client" }
holon-todoist = { path = "crates/holon-todoist" }
holon-org-format = { path = "crates/holon-org-format" }
holon-orgmode = { path = "crates/holon-orgmode", features = ["di"] }
holon-markdown = { path = "crates/holon-markdown" }
holon-filesystem = { path = "crates/holon-filesystem" }

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = "line-tables-only"
codegen-units = 4
panic = "abort"
lto = "thin"

# Debugger profile: full debug info for variable inspection in LLDB/DAP
# Usage: cargo build --profile debugger
[profile.debugger]
inherits = "dev"
debug = 2

# Coverage profile for runtime code coverage collection
# Usage: cargo build --profile coverage
[profile.coverage]
inherits = "dev"
debug = true
[profile.coverage.package."*"]

[patch.crates-io]
#sqlparser = { version = "0.33", default-features = false, features = [] }
flutter_rust_bridge = { git = "https://github.com/nightscape/flutter_rust_bridge.git", branch = "generic-enums-with-concrete-type-aliases" }
flutter_rust_bridge_macros = { git = "https://github.com/nightscape/flutter_rust_bridge.git", branch = "generic-enums-with-concrete-type-aliases" }
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }
pathfinder_simd = { git = "https://github.com/pbdeuchler/pathfinder.git", branch = "pbd/fix_simd_renames", package = "pathfinder_simd" }

# Holon fork of zed — tracks the `holon` branch so we can add more ports
# (currently: a one-line `std::mem::forget` of an extra strong Rc<AppCell>
# inside `Application::run` on iOS so the context survives beyond the single
# pass through UIApplicationMain's finish-launching callback). Without the
# iOS patch, every Weak<AppCell> held by windows / async tasks dangles as
# soon as the first run loop tick fires applicationDidBecomeActive.
# Rebase the branch periodically onto the upstream rev used by gpui-mobile.
[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/holon-space/zed.git", branch = "holon" }
gpui_wgpu = { git = "https://github.com/holon-space/zed.git", branch = "holon" }
gpui_macos = { git = "https://github.com/holon-space/zed.git", branch = "holon" }
gpui_linux = { git = "https://github.com/holon-space/zed.git", branch = "holon" }
gpui_windows = { git = "https://github.com/holon-space/zed.git", branch = "holon" }
gpui_web = { git = "https://github.com/holon-space/zed.git", branch = "holon" }
gpui_platform = { git = "https://github.com/holon-space/zed.git", branch = "holon" }

# Holon fork of gpui-mobile — tracks the `holon` branch. Currently carries
# a single patch: wire a real display handle into wgpu's `InstanceDescriptor`
# on iOS so `Instance::create_surface_unsafe` actually produces a Metal
# surface under wgpu v29. Without this the iOS `IosWindow.renderer` stays
# `None`, every `draw()` hits the fallback, and the Metal layer shows only
# its clear color (black screen).
[patch."https://github.com/itsbalamurali/gpui-mobile"]
gpui-mobile = { git = "https://github.com/holon-space/gpui-mobile.git", branch = "holon" }

# Point at local clone while the `context_menu_extender` commit is
# unpublished — once pushed to holon-space/gpui-component the `path`
# can be replaced by the git+branch spec used in frontends/gpui/Cargo.toml.
[patch."https://github.com/holon-space/gpui-component"]
gpui-component = { path = "/Users/martin/Workspaces/rust/gpui-component/crates/ui" }

