[package]
name = "holon-tools"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "turso-sql-replay"
path = "src/turso_sql_replay.rs"

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
turso = { workspace = true }
turso_core = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
