[package]
name = "holon-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "holon-engine"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rhai = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
