[package]
name = "holon-frontend"
version = "0.1.0"
edition = "2021"

[features]
default = []
heap-profile = ["dep:dhat", "dep:ctrlc"]
chrome-trace = ["dep:tracing-chrome", "dep:tracing-subscriber", "dep:chrono"]
blinc = ["dep:blinc_core", "dep:blinc_theme"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["time"] }
toml.workspace = true
tracing.workspace = true

holon.workspace = true
holon-core.workspace = true
holon-filesystem = { path = "../holon-filesystem" }
holon-macros.workspace = true
holon-mcp-client.workspace = true
holon-orgmode.workspace = true
holon-todoist.workspace = true
holon-api.workspace = true
async-trait.workspace = true
ferrous-di.workspace = true
memory-stats.workspace = true
dhat = { workspace = true, optional = true }
ctrlc = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
blinc_core = { git = "https://github.com/project-blinc/Blinc", package = "blinc_core", optional = true }
blinc_theme = { git = "https://github.com/project-blinc/Blinc", package = "blinc_theme", optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid.workspace = true
