[package]
name = "holon-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "holon_integration_tests"
path = "src/lib.rs"

[[test]]
name = "cucumber"
harness = false

[features]
default = ["test-infra", "pbt"]
test-infra = [
    "dep:holon",
    "dep:holon-frontend",
    "dep:holon-orgmode",
    "dep:holon-api",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tempfile",
    "dep:anyhow",
    "dep:ferrous-di",
    "dep:indexmap",
    "dep:futures",
]
pbt = [
    "test-infra",
    "dep:proptest",
    "dep:proptest-state-machine",
    "dep:loro",
    "dep:similar-asserts",
    "dep:serde_json",
    "dep:regex",
]

[dependencies]
holon = { workspace = true, features = ["test-helpers"], optional = true }
holon-frontend = { workspace = true, optional = true }
holon-orgmode = { workspace = true, optional = true }
holon-api = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs", "sync"], optional = true }
tokio-stream = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
ferrous-di = { workspace = true, features = ["wasm"], optional = true }
indexmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true }
enigo = { version = "0.6", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
xcap = "0.8"
proptest = { workspace = true, optional = true }
proptest-state-machine = { workspace = true, optional = true }
loro = { workspace = true, optional = true }
similar-asserts = { version = "1.7.0", optional = true }
serde_json = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
# Testing infrastructure (enable pbt feature for test targets)
proptest.workspace = true
proptest-state-machine.workspace = true
cucumber.workspace = true
futures.workspace = true
similar-asserts = "1.7.0"
regex.workspace = true
loro.workspace = true
serde_json.workspace = true

