[package]
name = "holon-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "holon_integration_tests"
path = "src/lib.rs"

[[test]]
name = "cucumber"
harness = false

[features]
default = ["test-infra", "pbt"]
test-infra = [
    "dep:holon",
    "dep:holon-frontend",
    "dep:holon-orgmode",
    "dep:holon-api",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tempfile",
    "dep:anyhow",
    "dep:fluxdi",
    "dep:indexmap",
    "dep:futures",
]
otel-testing = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:serde",
    "dep:chrono",
    "dep:memory-stats",
]
chrome-trace = ["dep:tracing-chrome", "otel-testing"]
pbt = [
    "test-infra",
    "otel-testing",
    "dep:holon-layout-testing",
    "dep:proptest",
    "dep:proptest-state-machine",
    "dep:loro",
    "dep:similar-asserts",
    "dep:serde_json",
    "dep:regex",
    "dep:futures-signals",
    "dep:rhai",
]

[dependencies]
holon = { workspace = true, features = ["test-helpers"], optional = true }
holon-frontend = { workspace = true, optional = true }
holon-orgmode = { workspace = true, optional = true }
holon-api = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs", "sync"], optional = true }
tokio-stream = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
fluxdi = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true }
holon-mcp-client = { path = "../holon-mcp-client" }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", tag = "rmcp-v0.12.0", features = ["client", "server", "transport-child-process"] }
tracing = { workspace = true }
enigo = { version = "0.6", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
xcap = { git = "https://github.com/nightscape/xcap", branch = "feat/macos-offscreen-windows" }
signal-hook = "0.3"
holon-layout-testing = { path = "../holon-layout-testing", optional = true }
proptest = { workspace = true, optional = true }
proptest-state-machine = { workspace = true, optional = true }
loro = { workspace = true, optional = true }
similar-asserts = { version = "1.7.0", optional = true }
serde_json = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
futures-signals = { workspace = true, optional = true }
rhai = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["testing"], optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
memory-stats = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
# Testing infrastructure (enable pbt feature for test targets)
proptest.workspace = true
proptest-state-machine.workspace = true
cucumber.workspace = true
futures.workspace = true
similar-asserts = "1.7.0"
regex.workspace = true
loro.workspace = true
serde_json.workspace = true

