[package]
name = "holon-macros"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
holon.workspace = true
holon-core.workspace = true
holon-api.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
