[package]
name = "holon-markdown"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
holon-api.workspace = true
holon-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
markdown = "1.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile.workspace = true
