[package]
name = "holon-org-format"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
orgize.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
tracing.workspace = true
once_cell.workspace = true
holon-api.workspace = true
holon-core.workspace = true
holon-macros.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest.workspace = true
