[package]
name = "holon-orgmode"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
di = []

[dependencies]
holon-org-format.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
holon.workspace = true
holon-macros.workspace = true
holon-api.workspace = true
holon-filesystem.workspace = true
fluxdi.workspace = true
notify = "8.0"
ignore.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
