[package]
name = "holon"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "holon"
path = "src/lib.rs"

[features]
default = ["iroh-sync"]
# Enable test helpers for integration tests that need access to test utilities
test-helpers = []
# Enable Iroh P2P transport for syncing Loro documents across devices
iroh-sync = ["iroh", "base64"]

[dependencies]
loro.workspace = true
loro_fractional_index.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true
async-trait.workspace = true
turso.workspace = true
turso_core.workspace = true
turso_sdk_kit.workspace = true
thiserror.workspace = true
holon-macros.workspace = true
holon-api.workspace = true
holon-core.workspace = true
similar.workspace = true
prqlc.workspace = true
prqlc-parser.workspace = true
gql-parser.workspace = true
gql-transform.workspace = true
rand.workspace = true
rhai.workspace = true
sqlparser.workspace = true
once_cell.workspace = true
serde_yaml.workspace = true
holon-engine = { path = "../holon-engine" }
fluxdi.workspace = true
futures.workspace = true
futures-signals.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
iroh = { workspace = true, features = ["default"], optional = true }
reqwest.workspace = true
uuid.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true
base64 = { version = "0.22", optional = true }

# wasm32-wasip1-threads (holon-worker) — wasi has std::time and std::thread
# but tokio refuses `rt-multi-thread` on any wasm target, and wasi doesn't
# carry a TLS stack so reqwest/iroh stay native-only. The deps below are
# the minimum holon source needs at compile time on wasi.
[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { workspace = true, default-features = false, features = ["sync", "macros", "rt", "time"] }
uuid.workspace = true

# Android-specific dependencies
# Disable iroh for Android - it pulls in OpenSSL which is complex to build for Android
# iroh is used for P2P features which may not be needed on mobile
# Use rustls instead of OpenSSL for Android (OpenSSL requires native compilation)
[target.'cfg(target_os = "android")'.dependencies]
iroh = { workspace = true, optional = true }
reqwest.workspace = true
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tokio = { workspace = true, default-features = false, features = ["sync", "macros", "rt", "time"] }
getrandom.workspace = true
reqwest.workspace = true
uuid = { workspace = true, features = ["js"] }
wasm-bindgen-futures = "0.4"
# Browser-backed Instant/SystemTime. wasm32-unknown has no std::time clock.
# wasm32-wasip1-threads (the holon-worker target) has std::time and uses the
# native paths instead.
web-time = "1"

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test.workspace = true
tempfile.workspace = true
similar-asserts = "1.7.0"

[[test]]
name = "e2e_backend_engine_test"
required-features = ["test-helpers"]

[[test]]
name = "json_aggregation_e2e_test"
required-features = ["test-helpers"]
